--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body width="800px" height="600px">
+  <body>
     <div id="root"></div>
     <script type="module" src="browser/main.tsx"></script>
   </body>
